# ACowork

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  buglist.txt  test-output.txt
agent-packages/: calendar-agent.calendar  doc-writer-agent.doc  system-agent.system  weather-agent.weather
apps/acowork-desktop/: index.html  package-lock.json  package.json
apps/rollball-desktop/: package-lock.json  package.json
assets/: lsp_servers.json  offline_providers.json
assets/lsp_install/: clangd.ps1  clangd.sh  css.ps1  css.sh  go.ps1  go.sh  html.ps1  html.sh  java.ps1  java.sh  json.ps1  json.sh  kotlin.ps1  kotlin.sh  markdown.ps1  markdown.sh  python.ps1  python.sh  rust.ps1  rust.sh  typescript.ps1  typescript.sh  yaml.ps1  yaml.sh
core/: Cargo.toml
core/acowork-core/: Cargo.toml
core/acowork-embed/: Cargo.toml
core/acowork-lsp-relay/: Cargo.toml
core/acowork-lsp-relay/src/: codebase.rs  config.rs  install.rs  lib.rs  main.rs  pool.rs  protocol.rs  relay.rs  server.rs  state.rs
dev/: build-agent.ps1  build-agent.sh  build_core.ps1  build_core.sh  build_macos.sh  check_bom.ps1  fix_tsx.ps1  generate_offline_providers.py  ort_env.js  package_desktop_linux.sh  package_desktop_macos.sh  package_desktop_windows.ps1  patch_grpc.py  patch_routes.py  patch_routes2.py  setup_ort.ps1  setup_ort.sh
docs/: 00-prd.md  02-agent-package.md  03-agent-runtime.md  04-gateway.md  05-memory.md  06-communication.md  09-roadmap-and-scenarios.md  12-tool-system.md  13-skill-system.md  AGENTS.md
document-manager/: .env.example  .gitignore
(+745 files in other folders)
