[package]
name = "acowork-lsp-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

description = "LSP protocol relay — standalone process managed by Gateway supervisor"

[[bin]]
name = "acowork-lsp-relay"
path = "src/main.rs"

[dependencies]
acowork-core.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures-util.workspace = true
async-stream = "0.3"
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
tower-http.workspace = true
indexmap = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
tokio-tungstenite.workspace = true